login view appears, when status button is pressed.

--- a/Simple Reader/Base.lproj/Main.storyboard
+++ b/Simple Reader/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EfK-J0-let">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EfK-J0-let">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Register View Controller-->
@@ -19,14 +19,12 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hesseblättche Abonnieren" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FrZ-ah-1sl">
                                 <rect key="frame" x="16" y="36" width="568" height="21"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWn-PV-5T5">
                                 <rect key="frame" x="50" y="123" width="500" height="30"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -35,7 +33,6 @@
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-Mail Adresse" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Eu-Ze-YrX">
                                 <rect key="frame" x="50" y="161" width="500" height="30"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -44,7 +41,6 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Pp-u8-gAj">
                                 <rect key="frame" x="0.0" y="199" width="600" height="30"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" title="Anmelden"/>
                                 <connections>
@@ -53,14 +49,12 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UUID " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GeJ-3d-zr4">
                                 <rect key="frame" x="0.0" y="578" width="600" height="14"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sc4-hf-gI8">
                                 <rect key="frame" x="16" y="65" width="568" height="50"/>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Damit du das Hesseblättche hier lesen kannst, musst du dich mit deinem Namen und deiner E-Mail Adresse anmelden und freigegeben werden.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -71,11 +65,9 @@
                                 <subviews>
                                     <activityIndicatorView opaque="NO" contentMode="center" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="zeC-6B-5zn">
                                         <rect key="frame" x="282" y="281" width="37" height="37"/>
-                                        <animations/>
                                         <rect key="contentStretch" x="0.0" y="0.0" width="0.94999999999999996" height="1"/>
                                     </activityIndicatorView>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="centerX" secondItem="zeC-6B-5zn" secondAttribute="centerX" id="UB8-LZ-gcJ"/>
@@ -83,7 +75,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="9Pp-u8-gAj" firstAttribute="trailing" secondItem="Ril-lR-vIt" secondAttribute="trailing" id="3Op-ds-7Uf"/>
@@ -134,6 +125,7 @@
                         <outlet property="emailTextField" destination="7Eu-Ze-YrX" id="J2l-Dt-ohZ"/>
                         <outlet property="nameTextField" destination="hWn-PV-5T5" id="H43-iB-9w0"/>
                         <outlet property="overlayView" destination="4zg-4d-qAg" id="Bi9-eH-5b3"/>
+                        <outlet property="textView" destination="sc4-hf-gI8" id="Lsl-J7-nY8"/>
                         <outlet property="uuidLabel" destination="GeJ-3d-zr4" id="pLs-1y-U1U"/>
                     </connections>
                 </viewController>
@@ -148,7 +140,6 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="242" sectionHeaderHeight="22" sectionFooterHeight="22" id="M04-1b-qsP">
                         <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="infinite" selectionStyle="default" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="PreviewCell" id="fmI-Wz-ViG" customClass="PreviewTableViewCell">
@@ -163,7 +154,6 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downloading1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ajq-2T-Uux">
                                                     <rect key="frame" x="202" y="14" width="12" height="12"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="12" id="Vuu-RD-toR"/>
                                                         <constraint firstAttribute="height" constant="12" id="ij5-z6-VIq"/>
@@ -171,21 +161,18 @@
                                                 </imageView>
                                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FJT-aI-bjw">
                                                     <rect key="frame" x="0.0" y="32" width="214" height="2"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="2" id="lWE-Z8-JLh"/>
                                                     </constraints>
                                                 </progressView>
                                                 <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dam-28-xyd">
                                                     <rect key="frame" x="0.0" y="34" width="214" height="203"/>
-                                                    <animations/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non</string>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                                 </textView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ausgabe 17" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llm-Zo-juh">
                                                     <rect key="frame" x="0.0" y="8" width="194" height="24"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="24" id="ee3-0J-v9D"/>
                                                     </constraints>
@@ -194,7 +181,6 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <animations/>
                                             <constraints>
                                                 <constraint firstItem="ajq-2T-Uux" firstAttribute="leading" secondItem="llm-Zo-juh" secondAttribute="trailing" constant="8" id="0Vd-G6-mas"/>
                                                 <constraint firstItem="FJT-aI-bjw" firstAttribute="top" secondItem="llm-Zo-juh" secondAttribute="bottom" id="5Sk-70-c8W"/>
@@ -212,14 +198,12 @@
                                         </view>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vcp-zeichen.png" translatesAutoresizingMaskIntoConstraints="NO" id="xmX-kh-zuO">
                                             <rect key="frame" x="0.0" y="0.0" width="170" height="242"/>
-                                            <animations/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="242" id="ef5-9M-4Tc"/>
                                                 <constraint firstAttribute="width" constant="170" id="lzf-c8-M19"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
-                                    <animations/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="xmX-kh-zuO" secondAttribute="bottom" id="4A8-OO-MOn"/>
                                         <constraint firstItem="nUZ-0x-amX" firstAttribute="top" secondItem="ycZ-OH-YbE" secondAttribute="top" id="BKj-y3-XuV"/>
@@ -230,7 +214,6 @@
                                         <constraint firstItem="nUZ-0x-amX" firstAttribute="leading" secondItem="xmX-kh-zuO" secondAttribute="trailing" constant="8" id="szV-XF-nPa"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <animations/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="-8" bottom="0.0" right="0.0"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
@@ -258,7 +241,9 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="S9a-VC-BP1">
                                 <rect key="frame" x="367" y="15" width="13" height="13"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <animations/>
+                                <connections>
+                                    <action selector="statusButtonPressed:" destination="ews-zv-eml" eventType="touchDown" id="12b-Ya-YLO"/>
+                                </connections>
                             </button>
                             <connections>
                                 <action selector="statusButtonPressed:" destination="ews-zv-eml" id="zvw-81-D3B"/>
@@ -283,7 +268,6 @@
                     <webView key="view" contentMode="scaleToFill" scalesPageToFit="YES" allowsInlineMediaPlayback="NO" mediaPlaybackRequiresUserAction="NO" mediaPlaybackAllowsAirPlay="NO" keyboardDisplayRequiresUserAction="NO" paginationMode="bottomToTop" id="HNu-fT-0C5">
                         <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <dataDetectorType key="dataDetectorTypes"/>
                         <connections>
@@ -306,11 +290,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="A45-e9-Fxe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="OZH-Tv-4bA">
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </toolbar>
                     <connections>
                         <segue destination="ews-zv-eml" kind="relationship" relationship="rootViewController" id="Svs-PI-WB9"/>
